/*
 * Copyright (c) 2016 Cisco and/or its affiliates, and 
 *                    Cable Television Laboratories, Inc. ("CableLabs")
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at:
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

 /*
  * File has been generated by proto_generator.py
  */

syntax = "proto2";


message t_Ikev2 {
    message t_ShowParameter {
        optional uint32 parameter1 = 1;
        optional uint32 parameter2 = 2;
        optional uint32 parameter3 = 3;
    }
    optional t_ShowParameter ShowIkev2 = 1;
    message t_ShowParameter1 {
        optional bytes status = 1;
    }
    optional t_ShowParameter1 ShowIkev2Status = 2;
}
